# ens-backend

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  config.sample.json  docker-compose.yaml  sample.env
cache/: solidity-files-cache.json
dev/: .env.sample  docker-compose.yaml
k8s/: 00-namespace.yaml  01-secrets.sample.yaml  02-smtp.yaml  03-imap.yaml  04-backend-secret.sample.yaml  05-backend.yaml  06-backend-ingress.yaml  06-managed-certificate.yaml  07-backend-ingress.yaml  07-managed-certificate.yaml  09-imap-cronjob.yaml
src/: claim.rs  command.rs  dkim.rs  inbox.rs  lib.rs  main.rs  prove.rs  smtp.rs  state.rs
src/claim/: models.rs  routes.rs
templates/: command_confirmation.html  transaction_success.html
test/fixtures/: ProofEncoder.sol
test/fixtures/case1_claim/: email.eml  inputs.json  prover_response.json
test/fixtures/case2_claim_with_resolver/: email.eml  inputs.json  prover_response.json
test/fixtures/case3/: email.eml  inputs.json  prover_response.json
test/fixtures/claim_ens_1/: email.eml  inputs.json  prover_response.json
