[package]
name = "ens-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
alloy = "1.0.9"
axum = "0.8.4"
dotenv = "0.15.0"
reqwest = "0.12.19"
serde = "1.0.219"
serde_json = "1.0.140"
tokio = { version = "1", features = ["full"] }
relayer-utils = { git = "https://github.com/zkemail/relayer-utils.git", branch = "zkfriendly/sol-94-update-relayer-utils-v46-to-use-new-command-regex" }
anyhow = "1.0.98"
