[package]
name = "ens-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
alloy = "1.0.9"
axum = "0.8.4"
reqwest = "0.12.19"
serde = "1.0.219"
serde_json = "1.0.140"
tokio = { version = "1", features = ["full"] }
relayer-utils = { git = "https://github.com/zkemail/relayer-utils.git", branch = "zkfriendly/sol-94-update-relayer-utils-v46-to-use-new-command-regex" }
anyhow = "1.0.98"
httpmock = "0.7.0"
regex = "1.10.6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.5.2", features = ["trace"] }
quoted_printable = "0.5.1"
html-escape = "0.2.13"
thiserror = "2.0.12"
